Implmenta endpoint consulta status do Pedido
