# docs/swagger.json
@@ -222,6 +222,50 @@
                 }
             }
         },
+        "/pedidos/{numeropedido}": {
+            "get": {
+                "description": "Consulta o Status atual do Pedido",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Pedidos"
+                ],
+                "summary": "Obtém o Status do Pedido",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Numero do Pedido",
+                        "name": "numeropedido",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ObterStatusPedidoOutputDto"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/produtos": {
             "get": {
                 "description": "Obtém todos os Produtos cadastrados",
@@ -451,7 +495,7 @@
                     "type": "integer"
                 },
                 "status": {
-                    "$ref": "#/definitions/entity.StatusPedido"
+                    "type": "string"
                 },
                 "valor": {
                     "type": "number"
@@ -462,7 +506,7 @@
             "type": "object",
             "properties": {
                 "categoria": {
-                    "$ref": "#/definitions/entity.CategoriaProduto"
+                    "type": "string"
                 },
                 "descricao": {
                     "type": "string"
@@ -471,6 +515,20 @@
                     "type": "string"
                 },
                 "nome": {
+                    "type": "string"
+                },
+                "valor": {
+                    "type": "number"
+                }
+            }
+        },
+        "dto.ObterStatusPedidoOutputDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 },
                 "valor": {
@@ -502,21 +560,6 @@
                 "Bebida",
                 "Sobremesa",
                 "Acompanhamento"
-            ]
-        },
-        "entity.StatusPedido": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2,
-                3
-            ],
-            "x-enum-varnames": [
-                "Recebido",
-                "EmPreparacao",
-                "Pronto",
-                "Finalizado"
             ]
         },
         "handler.Error": {
